examples/test/testpolicy14561.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14561
  namespace: namespace262
spec:
  podSelector:
    matchLabels:
      key45: value20
      key14: value13
      key10: value35
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value22
      podSelector:
        matchLabels:
          key26: value3
          key49: value19
          key46: value2
